# side-by-side-blueprint

./: .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  FAQ.md  GOALS.md  LICENSE  Path_to_Closure.md  README.md  dep_graph_ground_truth.txt  dump.txt  html_ground_truth.txt  motivation1.txt  post_draft.txt  pyproject.toml  test_comparison_paper.tex
.claude/: settings.json
.claude/agents/: sbs-developer.md  sbs-improver.md  sbs-oracle.md  sbs-self-improve.md
.claude/plans/: devtools-crush-plan.md  task-191-converge-performance.md
.claude/skills/converge/: SKILL.md
.claude/skills/execute/: SKILL.md
.claude/skills/finalize-docs/: SKILL.md
.claude/skills/introspect/: SKILL.md
.claude/skills/log/: SKILL.md
.claude/skills/oracle/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/self-improve/: SKILL.md
.claude/skills/task/: SKILL.md
.claude/skills/update-and-archive/: SKILL.md
.refs/: ARCHITECTURE.md  GOALS.md  dep_graph_ground_truth.txt  motivation1.txt  motivation2.txt
archive/: COMPLIANCE_STATUS.md  README.md  archive_index.json  compliance_ledger.json  lifetime_stats.json  migrations.json  unified_ledger.json
archive/GCR/latest/: capture.json
archive/GeneralCrystallographicRestriction/latest/: capture.json
archive/SBSTest/latest/: capture.json
archive/manifests/: blueprint_verso_manifest.json  chapter_manifest.json  dashboard_manifest.json  dep_graph_manifest.json  paper_tex_manifest.json  paper_verso_manifest.json
archive/rubrics/: index.json
dev/: build-gcr.sh  build-pnt.sh  build-sbs-test.sh
dev/.refs/: ARCHITECTURE.md  motivation2.txt  motivation3.txt  motivation4.txt  sbs_ideas.txt  side_by_side_blueprint_ground_truth.txt
dev/markdowns/: ARCHITECTURE.md  Archive_Orchestration_and_Agent_Harmony.md  GOALS.md  IMAGE_HASH_DIFF_DESIGN.md  MVP.md  README.md
dev/scripts/: EXTRACTED_CRITERIA.md  README.md  VISUAL_COMPLIANCE.md  build.py  compact_archive.py  pytest.ini
dev/storage/: archive_index.json
forks/sbs-lsp-mcp/: README.md  pyproject.toml
forks/sbs-lsp-mcp/src/sbs_lsp_mcp/: __init__.py  __main__.py  browser_tools.py  client_utils.py  duckdb_layer.py  file_utils.py  gate_validation.py  loogle.py  outline_utils.py  profile_utils.py  sbs_models.py  sbs_self_improve.py  sbs_tools.py  sbs_utils.py  server.py  skill_tools.py  utils.py  zulip_tools.py
forks/sbs-lsp-mcp/tests/: __init__.py  conftest.py  test_archive_tools.py  test_build_tools.py  test_duckdb_layer.py  test_oracle_tools.py  test_search_tools.py  test_skill_tools.py  test_skill_tools_v2.py  test_visual_tools.py
forks/sls-mcp/: pyproject.toml
forks/sls-mcp/src/sls_mcp/: __init__.py  __main__.py  browser_tools.py  client_utils.py  duckdb_layer.py  gate_validation.py  instructions.py  loogle.py  outline_utils.py  profile_utils.py  server.py  skill_tools.py  sls_models.py  sls_tools.py  sls_utils.py  utils.py  zulip_tools.py
forks/sls-mcp/tests/: __init__.py  test_archive_tools.py  test_build_tools.py  test_duckdb_layer.py  test_oracle_tools.py  test_search_tools.py  test_skill_tools.py  test_skill_tools_v2.py  test_visual_tools.py
scripts/: VISUAL_COMPLIANCE.md  build.py  build_blueprint.sh  capture.py  extracted_criteria.json  warm_cache.sh
scripts/sbs/: __init__.py  archive_cmd.py  capture.py  cli.py  compare.py  criteria.py  ledger.py  rubric_cmd.py  utils.py  validate.py  versions.py
showcase/Quine/: .gitignore  Quine.lean  README.md  lake-manifest.json  lakefile.toml  runway.json
test_output/: test_comparison_paper-resolved.aux  test_comparison_paper-resolved.out  test_comparison_paper-resolved.tex  test_comparison_paper.aux  test_comparison_paper.out  test_runway.json
toolchain/LeanArchitect-Blueprint/: GenerateBlueprint.lean  LeanArchitectBlueprint.lean  lake-manifest.json  lakefile.toml  runway.json
(+804 files in other folders)
