[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sls"
version = "0.1.0"
description = "Strange Loop Station CLI tools"
readme = "dev/markdowns/README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0.3",
    "rich>=13.0",
    "toml>=0.10",
    "watchdog>=3.0",
    "websockets>=12.0",
]
# Note: sbs_core is provided as a compatibility shim in dev/scripts/sbs_core/
# until the real sbs-core package is created as a separate installable package.

[project.scripts]
sls = "sls.cli:main"
sbs = "sbs.cli:main"

[tool.setuptools.packages.find]
where = ["dev/scripts"]

[tool.pytest.ini_options]
testpaths = ["dev/scripts/sbs/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
