[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbs-lsp-mcp"
version = "0.1.0"
description = "SBS-enhanced Lean LSP MCP Server - fork of lean-lsp-mcp with Side-by-Side Blueprint tooling integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Eric Vergo" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.0",
    "leanclient>=0.3.8",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
    "certifi>=2023.0.0",
    "pyyaml>=6.0.0",  # Required for SBS archive integration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
sbs-lsp-mcp = "sbs_lsp_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sbs_lsp_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
