[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sls-mcp"
version = "0.1.0"
description = "SLS MCP Server - Strange Loop Station orchestration tooling with Lean LSP integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Eric Vergo" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.9.0",
    "leanclient>=0.3.8",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
    "certifi>=2023.0.0",
    "pyyaml>=6.0.0",  # Required for SBS archive integration
    "playwright>=1.58.0",
    "duckdb>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
zulip = [
    "playwright>=1.40.0",
]

[project.scripts]
sls-mcp = "sls_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sls_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
